add CreartIndex and DeleteIndex action