@@ -113,9 +113,10 @@ public class QueryApiKeyIT extends SecurityInBasicRestTestCase {
                 var subset = randomSubsetOf(randomIntBetween(1, 5), apiKeys);
                 assertQuery(
                     API_KEY_ADMIN_AUTH_HEADER,
-                    formatted("""
-                        { "query": { "ids": { "values": [%s] } } }""",
-                            subset.stream().map(m -> "\"" + m.get("id") + "\"").collect(Collectors.joining(","))),
+                    """
+                        { "query": { "ids": { "values": [%s] } } }""".formatted(
+                        subset.stream().map(m -> "\"" + m.get("id") + "\"").collect(Collectors.joining(","))
+                    ),
                     keys -> {
                         assertThat(keys, hasSize(subset.size()));
                         keys.forEach(k -> assertThat(k, not(hasKey("_sort"))));
@@ -132,8 +133,8 @@ public class QueryApiKeyIT extends SecurityInBasicRestTestCase {
 
         // Search for fields that are not allowed in Query DSL but used internally by the service itself
         final String fieldName = randomFrom("doc_type", "api_key_invalidated");
-        assertQueryError(API_KEY_ADMIN_AUTH_HEADER, 400, String.format(Locale.ROOT, """
-            { "query": { "term": {"%s": "%s"} } }""", fieldName, randomAlphaOfLengthBetween(3, 8)));
+        assertQueryError(API_KEY_ADMIN_AUTH_HEADER, 400, """
+            { "query": { "term": {"%s": "%s"} } }""".formatted(fieldName, randomAlphaOfLengthBetween(3, 8)));
 
         // Search for api keys won't return other entities
         assertQuery(API_KEY_ADMIN_AUTH_HEADER, """
@@ -164,10 +165,10 @@ public class QueryApiKeyIT extends SecurityInBasicRestTestCase {
         final String authHeader = randomFrom(API_KEY_ADMIN_AUTH_HEADER, API_KEY_USER_AUTH_HEADER);
         final String invalidatedApiKeyId1 = createAndInvalidateApiKey("temporary-key-1", authHeader);
         final String queryString = randomFrom("""
-            {"query": { "term": {"name": "temporary-key-1"} } }""", formatted("""
+            {"query": { "term": {"name": "temporary-key-1"} } }""", """
             {"query":{"bool":{"must":[{"term":{"name":{"value":"temporary-key-1"}}},\
             {"term":{"invalidated":{"value":"%s"}}}]}}}
-            """, randomBoolean()));
+            """.formatted(randomBoolean()));
 
         assertQuery(authHeader, queryString, apiKeys -> {
             if (queryString.contains("""
@@ -230,7 +231,7 @@ public class QueryApiKeyIT extends SecurityInBasicRestTestCase {
         final String authHeader = randomFrom(API_KEY_ADMIN_AUTH_HEADER, API_KEY_USER_AUTH_HEADER);
         final int total = randomIntBetween(8, 12);
         final List<String> apiKeyNames = IntStream.range(0, total)
-            .mapToObj(i -> formatted("k-%02d", i))
+            .mapToObj(i -> String.format(Locale.ROOT, "k-%02d", i))
             .toList();
         final List<String> apiKeyIds = new ArrayList<>(total);
         for (int i = 0; i < total; i++) {
@@ -260,9 +261,9 @@ public class QueryApiKeyIT extends SecurityInBasicRestTestCase {
             } else {
                 searchAfter.append(sortValues.get(0));
             }
-            request2.setJsonEntity(String.format(Locale.ROOT, """
+            request2.setJsonEntity("""
                 {"size":%s,"sort":["%s"],"search_after":[%s]}
-                """, size, sortField, searchAfter));
+                """.formatted(size, sortField, searchAfter));
             actualSize = collectApiKeys(apiKeyInfos, request2, total, size);
             if (actualSize == 0 && apiKeyInfos.size() < remaining) {
                 fail("fail to retrieve all API keys, expect [" + remaining + "] keys, got [" + apiKeyInfos + "]");
@@ -599,12 +600,12 @@ public class QueryApiKeyIT extends SecurityInBasicRestTestCase {
         final String metadataString = XContentTestUtils.convertToXContent(metadata == null ? Map.of() : metadata, XContentType.JSON)
             .utf8ToString();
         if (expiration == null) {
-            request.setJsonEntity(String.format(Locale.ROOT, """
-                {"name":"%s", "role_descriptors":%s, "metadata":%s}""", name, roleDescriptorsString, metadataString));
+            request.setJsonEntity("""
+                {"name":"%s", "role_descriptors":%s, "metadata":%s}""".formatted(name, roleDescriptorsString, metadataString));
         } else {
-            request.setJsonEntity(String.format(Locale.ROOT, """
+            request.setJsonEntity("""
                 {"name":"%s", "expiration": "%s", "role_descriptors":%s,\
-                "metadata":%s}""", name, expiration, roleDescriptorsString, metadataString));
+                "metadata":%s}""".formatted(name, expiration, roleDescriptorsString, metadataString));
         }
         request.setOptions(request.getOptions().toBuilder().addHeader(HttpHeaders.AUTHORIZATION, authHeader));
         final Response response = client().performRequest(request);
@@ -617,8 +618,8 @@ public class QueryApiKeyIT extends SecurityInBasicRestTestCase {
         final Tuple<String, String> tuple = createApiKey(name, null, authHeader);
         final Request request = new Request("DELETE", "/_security/api_key");
         request.setOptions(request.getOptions().toBuilder().addHeader(HttpHeaders.AUTHORIZATION, authHeader));
-        request.setJsonEntity(formatted("""
-            {"ids": ["%s"],"owner":true}""", tuple.v1()));
+        request.setJsonEntity("""
+            {"ids": ["%s"],"owner":true}""".formatted(tuple.v1()));
         assertOK(client().performRequest(request));
         return tuple.v1();
     }
